--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
-gem 'jekyll', '4.0.0'
+gem 'jekyll', '4.1.1'
 gem 'jekyll-theme-cloudcannon', :github => 'CloudCannon/jekyll-theme-cloudcannon', :branch => 'master'
 # gem 'jekyll-theme-cloudcannon', :path => '../../jekyll-theme'
 gem 'jekyll-autoprefixer'
-gem 'jekyll-feed', :github => 'CloudCannon/jekyll-feed', :branch => 'master'
+gem 'jekyll-feed', :github => 'CloudCannon/jekyll-feed', :branch => 'update-fork'
