--- a/src/Gemfile
+++ b/src/Gemfile
@@ -4,4 +4,4 @@ gem 'jekyll', '4.1.1'
 gem 'jekyll-theme-cloudcannon', :github => 'CloudCannon/jekyll-theme-cloudcannon', :branch => 'master'
 # gem 'jekyll-theme-cloudcannon', :path => '../../jekyll-theme'
 gem 'jekyll-autoprefixer'
-gem 'jekyll-feed', :github => 'CloudCannon/jekyll-feed', :branch => 'update-fork'
+gem 'jekyll-feed', :github => 'CloudCannon/jekyll-feed', :branch => 'master'
